Show itinerary tickets together with leg ones
# Conflicts:
#	application/src/ext/java/org/opentripplanner/ext/fares/model/FareTransferRuleBuilder.java